ASC Bot Version 2.0.0
- Added SQL integrations to local mysql server

- Added checks for current time so bot does not recommend time that has already passed.

- Added checks so bot does not ask for show or time if there is only one show or time

- minor bug fixes

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ repositories {
 dependencies {
     compile 'com.furhatrobotics.furhatos:furhat-commons:2.1.0'
     compile 'com.furhatrobotics.assets:StandardLibraryCollection:+'
+    implementation 'mysql:mysql-connector-java:8.0.33'
 }
 
 jar {
